# tpAruco

./: ArUco-OpenGL.cpp  ArUco-OpenGL.h  CMakeLists.txt  camera.yml  main.cpp  main.h
